refactor: university를 findAll로 조회하지 않고 쿼리에서 바로 조회하여 최적화 (#159)