@@ -1,6 +1,5 @@
 package com.team.buddyya.student.service;
 
-import com.team.buddyya.student.domain.University;
 import com.team.buddyya.student.dto.response.UniversityResponse;
 import com.team.buddyya.student.repository.UniversityRepository;
 import lombok.RequiredArgsConstructor;
@@ -8,7 +7,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,9 +17,8 @@ public class UniversityService {
 
     @Transactional(readOnly = true)
     public List<UniversityResponse> getActiveUniversities() {
-        return universityRepository.findAll().stream()
-                .filter(University::getIsActive)
+        return universityRepository.findByIsActiveTrue().stream()
                 .map(UniversityResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
